bin_PROGRAMS=mwutest

mwutest_CPPFLAGS = -pg
mwutest_LDFLAGS = -pg

mwutest_SOURCES = block.cc block.h \
				  predictor.cc predictor.h \
				  fscore.cc fscore.h \
				  config.h config.cc \
				  alglibinternal.cc alglibinternal.h \
				  alglibmisc.cc alglibmisc.h \
				  ap.cc ap.h \
				  dataanalysis.cc dataanalysis.h \
				  diffequations.cc diffequations.h \
				  fasttransforms.cc fasttransforms.h \
				  integration.cc integration.h \
				  interpolation.cc interpolation.h \
				  linalg.cc linalg.h \
				  mwu.cc mwu.h \
				  optimization.cc optimization.h \
				  solvers.cc solvers.h \
				  specialfunctions.cc specialfunctions.h \
				  statistics.cc statistics.h \
				  main.cc 
